first day challenge done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-light" style="background: rgb(157,56,100); background: radial-gradient(circle, rgba(157,56,100,1) 0%, rgba(11,18,27,1) 100%);">
     <%= yield %>
   </body>
 </html>
