--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,7 +1,9 @@
-<%= simple_form_for([@list, @bookmark]) do |f| %>
-  <%= f.input :comment %>
-  <%= f.association :movie %>
-  <%# <%= f.input :movie, collection: Movie.all %>
-  <%= f.submit %>
-  <%= link_to "Back to Lists", lists_path, class: "btn btn-primary" %>
-<% end %>
+<div class="container w-50 mt-5">
+  <%= simple_form_for([@list, @bookmark]) do |f| %>
+    <%= f.input :comment %>
+    <%= f.association :movie %>
+    <%# <%= f.input :movie, collection: Movie.all %>
+    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <%= link_to "Back to Lists", lists_path, class: "btn btn-primary" %>
+  <% end %>
+</div>
