--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,18 +2,26 @@
   <h2><%= @list.name %></h2>
   <%= link_to "See all lists", lists_path, class: 'btn btn-primary' %>
   <%= link_to "Add a movie", new_list_bookmark_path(@list), class: 'btn btn-primary' %>
-  <ul>
+  <div class="container mt-5">
+  <div class="row">
     <% @list.bookmarks.each do |bookmark| %>
-    <li>
-      <%= bookmark.movie.title %> :
-      <%= bookmark.comment %>
-      <%= link_to bookmark_path(bookmark), data: {
-          turbo_method: "delete",
-          turbo_confirm: "are you sure?"
-        } do %>
-          <i class="fa-regular fa-trash-can"></i>
-        <% end %>
-    </li>
+      <div class="col-sm-4">
+        <div class="card mb-3">
+          <%= image_tag bookmark.movie.poster_url, class: "card-img-top" %>
+          <div class="card-body">
+            <h5 class="card-title"><%= bookmark.movie.title %></h5>
+            <p class="card-text"><%= bookmark.comment %></p>
+            <%= link_to bookmark_path(bookmark), data: {
+                turbo_method: "delete",
+                turbo_confirm: "are you sure?"
+              } do %>
+              <i class="fas fa-trash-alt"></i> Delete
+            <% end %>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </ul>
+  </div>
+</div>
+
 </div>
