able to upload images to server and show them

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container w-50 mt-5">
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit "Submit", class: "btn btn-primary" %>
     <%= link_to "Back to Lists", lists_path, class: "btn btn-primary" %>
   <% end %>
