--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,27 +1,27 @@
 <div class="container mt-5 justify-content-between">
+  <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
   <h2><%= @list.name %></h2>
   <%= link_to "See all lists", lists_path, class: 'btn btn-primary' %>
   <%= link_to "Add a movie", new_list_bookmark_path(@list), class: 'btn btn-primary' %>
   <div class="container mt-5">
-  <div class="row">
-    <% @list.bookmarks.each do |bookmark| %>
-      <div class="col-sm-4">
-        <div class="card mb-3">
-          <%= image_tag bookmark.movie.poster_url, class: "card-img-top" %>
-          <div class="card-body">
-            <h5 class="card-title"><%= bookmark.movie.title %></h5>
-            <p class="card-text"><%= bookmark.comment %></p>
-            <%= link_to bookmark_path(bookmark), data: {
-                turbo_method: "delete",
-                turbo_confirm: "are you sure?"
-              } do %>
-              <i class="fas fa-trash-alt"></i> Delete
-            <% end %>
+    <div class="row">
+      <% @list.bookmarks.each do |bookmark| %>
+        <div class="col-sm-4">
+          <div class="card mb-3">
+            <%= image_tag bookmark.movie.poster_url, class: "card-img-top" %>
+            <div class="card-body">
+              <h5 class="card-title"><%= bookmark.movie.title %></h5>
+              <p class="card-text"><%= bookmark.comment %></p>
+              <%= link_to bookmark_path(bookmark), data: {
+                  turbo_method: "delete",
+                  turbo_confirm: "are you sure?"
+                } do %>
+                <i class="fas fa-trash-alt"></i> Delete
+              <% end %>
+            </div>
           </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
-</div>
-
 </div>
