--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,21 +1,15 @@
-<%# <div class="container-fluid">
-  <div class="row">
-    <div class="col-12 h-50vh mb-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-      <div class="card-category d-flex align-items-center justify-content-center h-100">
-        Breakfast
-      </div>
-    </div>
-  </div>
-</div> %>
-
 <div class="container mt-5">
     <div class="d-flex flex-column align-items-center">
-      <h1 class="text-light mb-4 display-1 font-weight-bold">All Lists</h1>
-      <ul class="list-group w-50">
-        <% @lists.each do |list| %>
-          <li class="list-group-item list-group-item-action bg-transparent text-center border-0"><%= link_to list.name, list_path(list), class:"text-light h3 text-decoration-none" %></li>
-        <% end %>
-      </ul>
-      <%= link_to "New list", new_list_path, class: "btn btn-primary mt-3" %>
-    </div>
+      <h1 class="text-light mb-3 display-1 font-weight-bold">All Lists</h1>
+
+      <%= link_to "New list", new_list_path, class: "btn btn-primary mb-4" %>
+
+      <ul class="cards">
+  <% @lists.each do |list| %>
+    <li class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, crop: :fill %>');">
+      <%= link_to list.name, list_path(list), class: "text-light h3 text-decoration-none" %>
+    </li>
+  <% end %>
+</ul>
+   </div>
 </div>
