--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,8 @@
 <div class="container w-50 mt-5">
+  <h2>Create a New List</h2>
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name %>
-    <%= f.input :photo, as: :file %>
+    <span style=''><%= f.input :photo, as: :file %></span>
     <%= f.submit "Submit", class: "btn btn-primary" %>
     <%= link_to "Back to Lists", lists_path, class: "btn btn-primary" %>
   <% end %>
