added style and readme

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-<body class="bg-light" style="background-image: url('https://source.unsplash.com/a-black-and-white-photo-of-a-dark-room-Ig1YHgmJrnQ'); background-size: cover;">
+<body class="bg-gray">
     <%= yield %>
   </body>
 </html>
