--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container w-50 mt-5">
+  <h2><%= @list.name %></h2>
   <%= simple_form_for([@list, @bookmark]) do |f| %>
     <%= f.association :movie %>
     <%= f.input :comment %>
