--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,7 +7,7 @@
       <ul class="cards">
   <% @lists.each do |list| %>
     <li class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, crop: :fill %>');">
-      <%= link_to list.name, list_path(list), class: "text-light h3 text-decoration-none" %>
+      <%= link_to list.name, list_path(list), class: "text-light h3 text-decoration-none px-3" %>
     </li>
   <% end %>
 </ul>
